corrige urls de login e redirect

--- a/qms/templates/base.html
+++ b/qms/templates/base.html
@@ -1,5 +1,5 @@
 {% if colaborador.is_admin %}
-        <a href="/admin" target="_blank" class="text-warning">⚙️ Administração Avançada</a>
+        <a href="/admin/" target="_blank" class="text-warning">⚙️ Administração Avançada</a>
     {% endif %}
     
     <form action="{% url 'logout' %}" method="post" style="margin-top: auto;">
