remove include desnecessario de qms.urls

--- a/qms/templates/dashboard.html
+++ b/qms/templates/dashboard.html
@@ -57,7 +57,7 @@
         <span class="navbar-brand mb-0 h1 ms-3">🏭 Calibra QMS | Painel de Controle</span>
         <div class="d-flex gap-2">
             <span class="navbar-text me-3 text-white">Olá, {{ nome_display }}</span>
-            <a href="/admin" class="btn btn-outline-light btn-sm">Acessar Área Administrativa</a>
+            <a href="/admin/" class="btn btn-outline-light btn-sm">Acessar Área Administrativa</a>
             <a href="{% url 'logout' %}" class="btn btn-outline-danger btn-sm">Sair</a>
         </div>
     </div>
